# human-rating-platform

./: .gitignore  README.md  render.yaml  sample_questions.csv
backend/: .env.example  config.py  config.toml  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/versions/: 20260304075406_add_prolific_fields.py
backend/routers/: admin.py  raters.py
backend/services/admin/: __init__.py  experiments.py  mappers.py  prolific.py
backend/static/: index.html
backend/static/assets/: index-5gYM6mBN.js  index-B-kSoyVI.js  index-BBrz-Nr8.js  index-BRKcJGzG.js  index-BWIs2G8L.js  index-BqpYkj7Y.js  index-CNRxoB2H.css  index-CQNd2y7N.js  index-CV66Xsnq.js  index-DE5pARZL.js  index-DzEiF1wU.js  index-kGMuvzDp.js  index-xoY2PR2Q.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  api.js  api.ts  index.css  types.ts
frontend/src/components/: AdminView.jsx  AdminView.tsx  Analytics.jsx  Analytics.tsx  ExperimentDetail.jsx  ExperimentDetail.tsx  ExperimentDetailPage.jsx  ExperimentDetailPage.tsx  QuestionCard.jsx  QuestionCard.tsx  RaterView.jsx  RaterView.tsx  Timer.jsx  Timer.tsx
